--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ img{vertical-align:middle; border:none;}
 .img_left { background:#FFF; float:left; margin:5px 20px 10px 0; padding:3px; border:1px solid #CCC; -webkit-box-shadow:1px 1px 3px 1px rgba(0, 0, 0, 0.04); -moz-box-shadow:1px 1px 3px 1px rgba(0, 0, 0, 0.04); box-shadow:1px 1px 3px 1px rgba(0, 0, 0, 0.04); }
 
 /*header div start*/
-.header { border-top:3px solid #da2b2a; padding:15px 0px; }
+.header { border-top:3px solid #142132; padding:15px 0px; }
 .logo { }
 .phone { font-family:'Roboto', sans-serif; color:#222222; font-size:24px; font-weight:400; text-align:center; text-decoration:none; }
 .phone a { color:#222222; text-decoration:none; }
@@ -23,8 +23,8 @@ img{vertical-align:middle; border:none;}
 
 /*paging css start*/
 .paging { font-family:'Open Sans', sans-serif; font-size:11px; color:#0034FF; font-weight:700; font-style:italic; margin:15px 0 20px 0; }
-.paging a { text-decoration:none; color:#FF0000; }
-.paging a:hover { text-decoration:none; color:#FF0000; }
+.paging a { text-decoration:none; color:#142132; }
+.paging a:hover { text-decoration:none; color:#142132; }
 .paging span { margin:0 5px; }
 .paging i { font-size:16px; }
 .paging .right_f { float:right; }
@@ -47,7 +47,7 @@ img{vertical-align:middle; border:none;}
 /*content div end*/
 
 /*callback div start*/
-.callback { background:#da2b2a; padding:10px; }
+.callback { background:#142132; padding:10px; }
 .callback h2 { font-family:'Roboto', sans-serif; font-size:24px; color:#FFF; font-weight:400; text-align:center; padding-bottom:8px; }
 
 .callback ::-webkit-input-placeholder { font-family:'Roboto', sans-serif; font-size:13px; color:#333; font-weight:400; }
@@ -69,7 +69,7 @@ img{vertical-align:middle; border:none;}
 /*services css start*/
 .services { font-family:"Roboto", sans-serif; color:#2b455f; font-weight:400; margin-top:30px; }
 .services h2 { padding-bottom:10px; text-align:center; }
-.services h3 { padding-bottom:10px; color:#da2b2a; font-weight:700; }
+.services h3 { padding-bottom:10px; color:#142132; font-weight:700; }
 .services p { text-align:center; margin-bottom:30px; }
 
 .services_box { background:#eeeeee; padding:30px; overflow:hidden; margin-bottom:30px; }
@@ -78,11 +78,11 @@ img{vertical-align:middle; border:none;}
 .services_box .box_right .text { font-size:14px; }
 
 .list { }
-.list h2 { background:#da2b2a; font-family:'Roboto', sans-serif; font-size:22px; color:#FFF; font-weight:400; padding:8px 10px 8px 10px; border-bottom:#dbdbdb 1px solid; text-align:left; }
+.list h2 { background:#142132; font-family:'Roboto', sans-serif; font-size:22px; color:#FFF; font-weight:400; padding:8px 10px 8px 10px; border-bottom:#dbdbdb 1px solid; text-align:left; }
 .list ul { margin:0px; padding:0px; list-style:none; }
 .list li { font-family:'Open Sans',serif; font-size:14px; color:#000; font-weight:400; line-height:2.2em; text-decoration:none; }
 .list li a { color:#000; text-decoration:none; padding-left:15px; }
-.list li a:hover { color:#da2b2a; text-decoration:none; }
+.list li a:hover { color:#142132; text-decoration:none; }
 .list li i { margin-right:10px; }
 /*services css end*/
 
@@ -90,7 +90,7 @@ img{vertical-align:middle; border:none;}
 .switch_menu { margin:0 auto; padding:0; margin:0px; }
 .switch_menu div.silverheader a { font-family:'Roboto', sans-serif; color:#191919; font-size:16px; font-weight:400; text-decoration:none; display:block; padding:10px; background:url(../images/marker.png) 97% 15px no-repeat; border:#d7d7d7 1px solid; -moz-transition:all 0.2s linear; -webkit-transition:all 0.2s linear; -o-transition:all  0.2s linear; transition:all 0.2s linear; margin:5px 0 5px 0; }
 .switch_menu div.silverheader a:visited, .switch_menu div.silverheader a:active { color:#191919;  }
-.switch_menu div.selected a, .switch_menu div.silverheader a:hover { background:url(../images/marker_down.png) 97% 18px no-repeat; border:#d7d7d7 1px solid; color:#da2b2a; }
+.switch_menu div.selected a, .switch_menu div.silverheader a:hover { background:url(../images/marker_down.png) 97% 18px no-repeat; border:#d7d7d7 1px solid; color:#142132; }
 .switch_menu div.submenu { }
 /*switch menu css end*/
 
@@ -109,7 +109,7 @@ img{vertical-align:middle; border:none;}
 /*bottom div start*/
 .mt { margin-top:20px;}
 .bottom { background:#071c33; padding:30px 0px 30px 0px; }
-.bottom h2 {  font-family:'Roboto'; font-size:22px; color:#da2b2a; font-weight:400; margin-bottom:15px; font-weight:700; }
+.bottom h2 {  font-family:'Roboto'; font-size:22px; color:#142132; font-weight:400; margin-bottom:15px; font-weight:700; }
 
 .bot1 { margin-right:20px; }
 .bot1 .text { font-family:'Roboto'; font-size:14px; color:#c9cbce; font-weight:400; line-height:1.8em; text-align:justify; }
@@ -119,7 +119,7 @@ img{vertical-align:middle; border:none;}
 .bot2 ul { margin:0px; padding:0px; list-style-type:none;}
 .bot2 li { font-family:'Roboto'; font-size:14px; color:#FFF; font-weight:400; border-bottom:#c9cbce 1px solid; }
 .bot2 li a { text-decoration:none; color:#c9cbce; line-height:3em; padding-left:10px;}
-.bot2 li a:hover { text-decoration:none; color:#da2b2a;}
+.bot2 li a:hover { text-decoration:none; color:#142132;}
 .bot2 li i { margin-right:10px; }
 
 .bot3 { font-family:'Roboto'; font-size:14px; color:#c9cbce; font-weight:400; }
@@ -130,7 +130,7 @@ img{vertical-align:middle; border:none;}
 .footer { background:#282e3a; border-top:1px dashed #4c5667; padding:10px 0 10px 0; }
 
 .copy { font-family:'Roboto'; font-size:12px; color:#FFF; font-weight:400; line-height:2.5em; }
-.copy a { color:#da2b2a; text-decoration:underline; padding:0 5px 0 5px; }
+.copy a { color:#142132; text-decoration:underline; padding:0 5px 0 5px; }
 .copy a:hover { color:#FFF; text-decoration:underline;} 
 
 .powered_by { float:right; font-family:'Roboto'; font-size:12px; color:#FFF; font-weight:400; line-height:2.5em; }
